--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,7 @@
       <div class="col-12">
         <div class="footer-inner">
           <h3 class="footer-title">{{site.title}}</h3>
+          <p>P.O. Box 728 Suwanee, GA 30024 - Copyright 2021 - All Rights Reserved</p>
         </div>
       </div>
     </div>
