--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,8 +6,11 @@ layout: default
     <div class="row justify-content-start">
         <div class="col-12 col-md-8 offset-md-2">
             <div class="service service-single">
-                <h1>{{page.title}}</h1>
+                {% if page.home != true %}
+                <div class="page-nav"><a href="/">Home</> / {{ page.title }}</div>
                 <hr />
+                {% endif %}
+                <h1>{{page.title}}</h1>
                 <div class="content">{{content}}</div>
             </div>
         </div>
