--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,8 +7,7 @@ layout: default
         <div class="col-12 col-md-8 offset-md-2">
             <div class="service service-single">
                 {% if page.home != true %}
-                <div class="page-nav"><a href="/">Home</> / {{ page.title }}</div>
-                <hr />
+                <div class="page-nav"><a href="/">Home</a> / {{ page.title }}</div>
                 {% endif %}
                 <h1>{{page.title}}</h1>
                 <div class="content">{{content}}</div>
