--- a/_sass/components/_page.scss
+++ b/_sass/components/_page.scss
@@ -8,6 +8,7 @@
 }
 
 .page-nav {
-  margin-bottom: 1.15rem;
-  border-bottom: 1px solid #E5261F;
+  margin-bottom: 2rem;
+  padding-bottom: .5rem;
+  border-bottom: 2px solid #E5261F;
 }
